# fastemplate

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: main.py  metrics.py  routes.py  settings.py
src/alembic/: README.md  env.py
src/alembic/versions/: f9debf2d4638_initial.py
src/db/: __init__.py  database.py  example.py  models.py
src/example/: models.py  views.py
src/service/: views.py
tests/: conftest.py  test_example.py  test_migrations.py  test_service.py
