[tool.poetry]
name = "fastemplate"
version = "0.0.1"
description = "A template for FastAPI projects"
authors = ["Igor Golyanov <thornograph@gmail.com>"]
packages = [
    { include = "*", from = "src" },
]

[tool.poetry.scripts]
app = "main:main"

[tool.poetry.dependencies]
python = "~3.10"
uvicorn = "^0.20.0"
fastapi = "^0.93.0"
requests = "^2.28.1"
sqlalchemy = { "extras" = ["mypy"], version = "^2.0" }
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.5"
alembic = "^1.8.1"
prometheus-fastapi-instrumentator = "^5.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-xdist = { extras = ["psutil"], version = "^3.0.2" }
pylint = "^2.16.1"
isort = "^5.10.1"
docformatter = "^1.5.0"
black = "^23.1.0"
mypy = ">=1"
ipython = "^8.7.0"
pytest-asyncio = "^0.20.2"
httpx = "^0.23.1"
greenlet = "^2.0.1"

[tool.mypy]
exclude = ["src/alembic/"]
plugins = ["pydantic.mypy"]
follow_imports = "silent"
show_column_numbers = true
check_untyped_defs = true
warn_redundant_casts = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["uvicorn", "prometheus_client", "prometheus_fastapi_instrumentator.*"]
ignore_missing_imports = true

[tool.pylint.master]
fail-under = 7.5
ignore-paths = [".*/alembic/.*.py"]
# ignore pydantic no-name-in-module error
extension-pkg-allow-list = ["pydantic"]

[tool.pylint.messages_control]
disable = [
    # functions should mainly be short and self-explanatory
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    # pydantic models usually have none
    "too-few-public-methods",
    "logging-fstring-interpolation"
]

[tool.pylint.miscellaneous]
# only treat FIXMEs as worthy warnings
notes = ["FIXME"]

[tool.pylint.format]
max-line-length = 120

[tool.black]
line-length = 120

[tool.isort]
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
